# nasa-jpl-capstone-2024-2025

./: .gitignore  .gitmodules  Doxyfile  README.md  buf_main.cpp  conanfile.txt  dem.cpp  dem.h  dem_preprocessor.py  setup_windows.sh
.github/workflows/: ci-windows.yml  ci.yml
algorithm/src/mempa_dem_handler/: buf_main.cpp
algorithm/src/mempa_dem_handler/mempa_dem/: buf_dem.cpp  buf_dem.h
docs/html/: annotated.html  buf__dem_8h_source.html  buf__rover_8h_source.html  classMEMPA_1_1BUF__DEM-members.html  classMEMPA_1_1BUF__DEM.html  classMEMPA_1_1BUF__ROVER-members.html  classMEMPA_1_1BUF__ROVER.html  classMEMPA_1_1DEM-members.html  classMEMPA_1_1DEM.html  classes.html  dem_8cpp.html  dem_8cpp__incl.dot  dem_8h.html  dem_8h__dep__incl.dot  dem_8h__incl.dot  dem_8h_source.html  dir_b8ea11d420054c946f2892556a2086f0.html  dir_b913b88db6b01987960087e85a3abde3.html  dir_c5ca46b7d626c54e23e98d6740f21e30.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  namespaceMEMPA.html  namespaces.html  pages.html  todo.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  searchdata.js
docs/latex/: annotated.tex  buf__dem_8h_source.tex  buf__rover_8h_source.tex  classMEMPA_1_1BUF__DEM.tex  classMEMPA_1_1BUF__ROVER.tex  classMEMPA_1_1DEM.tex  dem_8cpp.tex  dem_8cpp.tex.tmp  dem_8cpp__incl.dot  dem_8h.tex  dem_8h__dep__incl.dot  dem_8h__incl.dot  dem_8h_source.tex  dir_c5ca46b7d626c54e23e98d6740f21e30.tex  files.tex  index.tex  namespaceMEMPA.tex  namespaces.tex  refman.tex  todo.tex
mempa/: README.md  simulator
mempa/algorithm/: .gitignore  CMakeLists.txt  Makefile  README.md  Readme  test_output.json
mempa/algorithm/src/DemHandler/: DemHandler.cpp  DemHandler.h  DemHandler.hpp  DemHandler.inl  DemTester.cpp
mempa/algorithm/src/RoverSimulator/: Analyitics.cpp  RoverSimulator.cpp  RoverSimulator.hpp  RoverSimulator.inl  TerrainMetrics.cpp  path_logger.cpp  path_logger.h  simulator.cpp  terrain_metrics.h
mempa/algorithm/src/buf_main/: buf_main.cpp
mempa/algorithm/src/cli/: pathfinding_cli.cpp
mempa/algorithm/src/cli-draft/: cli  cli.h  cli_draft.cpp  cli_main.cpp
mempa/algorithm/src/dem-handler/: DemHandler.cpp  DemHandler.hpp  DemHandler.inl
mempa/algorithm/src/dem_handler/: buf_dem.cpp  buf_dem.h
mempa/algorithm/src/dem_test.out.dSYM/Contents/: Info.plist
mempa/algorithm/src/dem_test.out.dSYM/Contents/Resources/Relocations/x86_64/: dem_test.out.yml
mempa/algorithm/src/logger/: JsonPathLogger.cpp  JsonPathLogger.h  JsonPathLogger.hpp  PathLogger.cpp  PathLogger.h  PathLogger.hpp  TextPathLogger.cpp  TextPathLogger.h  TextPathLogger.hpp
mempa/algorithm/src/main/: CLI.cpp  CLI.hpp  CLI.inl  Cli.cpp  Cli.hpp  main.cpp
mempa/algorithm/src/mempa_dem_handler/mempa_dem/: buf_dem.cpp  buf_dem.h
mempa/algorithm/src/mempa_dem_handler/sim/: simulator.cpp
mempa/algorithm/src/metrics/: Analyitics.cpp  Metrics.cpp  Metrics.hpp  TerrainMetrics.cpp  TerrainMetrics.hpp
mempa/algorithm/src/rover-pathfinding-module/: NewDijkstras.cpp  NewDijkstras.hpp  SearchAlgorithm.cpp  SearchAlgorithm.hpp  SearchContext.cpp  SearchContext.h  SearchContext.hpp  dijkstras.cpp  dijkstras.h  dijkstras.hpp
mempa/algorithm/src/rover-simulator/: RoverSimulator.cpp  RoverSimulator.hpp  RoverSimulator.inl  simulator.cpp
mempa/algorithm/src/rover_standin/: RoverSimulator.cpp  RoverSimulator.h  simulator.cpp
mempa/algorithm/src/search_algorithms/: SearchAlgorithm.cpp  SearchAlgorithm.h  SearchContext.cpp  SearchContext.h  dijkstras.cpp  dijkstras.h
mempa/algorithm/src/sim/: simulator.cpp
mempa/algorithm/test_results/: path_1200_1200_1400_1400.txt  path_1254_1265_1340_1338.txt  path_1300_1300_1320_1320.txt
mempa/algorithm/tests/: DemTester.cpp  DijkstrasTester.cpp  Makefile  mine  run_tests.sh  test.cpp  test_coordinates.json  test_dijkstras.cpp  tests.cpp
mempa/mars-pathfinding-gui/: index.html  package.json  rover_path.txt  tailwind.config.js
mempa/mars-pathfinding-gui/mars-pathfinding/: README.md  package.json
mempa/mars-pathfinding-gui/mars-pathfinding/src/: main.ts  preload.ts
mempa/mars-pathfinding-gui/src/: App.tsx  index.css  main.ts  preload.ts
mempa/mars-pathfinding-gui/src/IPC/: DEMManager.ts  FilePathStore.ts  callAlgorithim.ts  electronIPC.ts  fileReader.ts  mainProcDEMFileHandlers.ts
mempa_algo/: buf_rover.cpp  buf_rover.h
mempa_dem/: buf_dem.cpp  buf_dem.h
prototypes/: cli_draft.cpp
prototypes/cli-draft/: cli  cli.h  cli_draft.cpp  cli_main.cpp
prototypes/example-cpp/: Makefile  example  example-darwin  example-darwin-arm64  example-linux  example.cpp  outfile
prototypes/first_dem_cpp/: buf_main.cpp
prototypes/first_dem_cpp/mempa_algo/: buf_rover.h
prototypes/first_dem_cpp/mempa_dem/: buf_dem.cpp  buf_dem.h
prototypes/luca-electron/cpp-program/: Makefile
prototypes/luca-electron/my-app/: forge.config.ts  package.json
prototypes/luca-electron/my-vite-app/: index.html
prototypes/luca-webassembaly/my-vite-app/: package-lock.json  package.json
prototypes/map2d/my-new-app/: forge.config.ts  package-lock.json  package.json
prototypes/mars-pathfinding/: babel.config.js  forge.config.ts  jest.config.js  jest.setup.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js
prototypes/mars-pathfinding/assets/: example
prototypes/mars-pathfinding/electron/: ipc-handlers.ts  main.ts  tsconfig.json
prototypes/mars-pathfinding/src/: App.tsx  index.css  main.ts  pathfinding.jsx  preload.ts  renderer.ts
prototypes/search_algorithms/: a.out  dijkstra.h  dijkstras.cpp  dijkstras.h
prototypes/sim/: .gitignore  Makefile  Readme  rover_path.txt  simulator.cpp
prototypes/sim/test_results/: path_1200_1200_1400_1400.txt  path_1254_1265_1340_1338.txt  path_1300_1300_1310_1310.txt  path_1300_1300_1320_1320.txt
prototypes/sim/tests/: run_tests.sh  test_coordinates.json
src/: README.md
(+123 files in other folders)
